Implement backend support for disabled nutrients
